exclusive-best-selling

--- a/sections/core-features.liquid
+++ b/sections/core-features.liquid
@@ -57,12 +57,27 @@
           "id": "colle_list",
           "label": "Select Collection list"
         }
-      ]
+      ],
+      "limit": 8
     }
   ],
   "presets": [
     {
-      "name": "Core Features"
+      "name": "Core Features",
+      "blocks": [
+        {
+          "type": "core-feature-card"
+        },
+        {
+          "type": "core-feature-card"
+        },
+        {
+          "type": "core-feature-card"
+        },
+        {
+          "type": "core-feature-card"
+        }
+      ]
     }
   ]
 }
