modified preset changes

--- a/sections/special-offer.liquid
+++ b/sections/special-offer.liquid
@@ -140,12 +140,14 @@
         {
           "type": "text",
           "id": "sub-title",
-          "label": "Enter Sub-title"
+          "label": "Enter Sub-title",
+          "default": "SPECIAL OFFER"
         },
         {
           "type": "text",
           "id": "title",
-          "label": "Enter title"
+          "label": "Enter title",
+          "default": "TOP COLLECTION 2022"
         },
         {
           "type": "image_picker",
@@ -162,7 +164,8 @@
         {
           "type": "text",
           "id": "product-title",
-          "label": "Enter special product title"
+          "label": "Enter special product title",
+          "default": "White Smart Watch"
         },
         {
           "type": "image_picker",
@@ -184,12 +187,14 @@
         {
           "type": "color",
           "id": "product-color-1",
-          "label": "Product color 1"
+          "label": "Product color 1",
+          "default": "#974b31"
         },
         {
           "type": "color",
           "id": "product-color-2",
-          "label": "Product color 2"
+          "label": "Product color 2",
+          "default": "#f2a900"
         }
       ]
     },
