--- a/sections/exclusive-best-selling.liquid
+++ b/sections/exclusive-best-selling.liquid
@@ -1,28 +1,39 @@
-{% for product in collections[section.settings.collection].products %}
-  {{- product.title | link_to: product.url }}
-
-  {% if product.featured_image != blank %}
-    {{ product.featured_image | image_url: width: auto | image_tag: loading: 'lazy' }}
-  {% endif %}
+{%- for block in section.blocks -%}
+  {%- case block.type -%}
+    {%- when 'exclusive_product' -%}
+      {% for product in collections[block].products %}
+        {{- product.title | link_to: product.url }}
+        {% if product.featured_image != blank %}
+          {{ product.featured_image | image_url: width: auto | image_tag: loading: 'lazy' }}
+        {% endif %}
+      {% endfor %}
+  {% endcase %}
 {% endfor %}
 
 {% schema %}
 {
   "name": "Collection",
-
-  "settings": [
+  "blocks": [
     {
-      "type": "collection",
-
-      "id": "collection",
-
-      "label": "Collection"
+      "name": "Exclusive Product",
+      "type": "exclusive_product",
+      "settings": [
+        {
+          "type": "collection",
+          "id": "collection",
+          "label": "Collection"
+        }
+      ]
     }
   ],
-
   "presets": [
     {
-      "name": "Exclusive-collection"
+      "name": "Exclusive-collection",
+      "blocks": [
+        {
+          "type": "exclusive_product"
+        }
+      ]
     }
   ]
 }
