--- a/snippets/title-heading.liquid
+++ b/snippets/title-heading.liquid
@@ -1,27 +1,20 @@
-{% comment %} Title block starts here {% endcomment %}
-{%- for block in section.blocks -%}
-  {%- case block.type -%}
-    {%- when 'title' -%}
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-lg-8">
-            <div class="section-title text-center mb-30">
-              <span class="sub-title">{{ block.settings['sub-title'] }}</span>
-              <h2 class="title">
-                {{ block.settings.title }}
-                <div>
-                  {% if block.settings.title_img != blank %}
-                    {{ block.settings.title_img | image_url: width: auto | image_tag: loading: 'lazy' }}
-                  {% endif %}
-                </div>
-              </h2>
-              {% if block.settings.title_desc != blank %}
-                <p>{{ block.settings.title_desc }}</p>
-              {% endif %}
-            </div>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-lg-8">
+      <div class="section-title text-center mb-30">
+        <span class="sub-title">{{ section.settings['sub-heading'] }}</span>
+        <h2 class="title">
+          {{ section.settings.heading }}
+          <div>
+            {% if section.settings.header_bg != blank %}
+              {{ section.settings.header_bg | image_url: width: auto | image_tag: loading: 'lazy' }}
+            {% endif %}
           </div>
-        </div>
+        </h2>
+        {% if section.settings.heading_desc != blank %}
+          <p>{{ section.settings.heading_desc }}</p>
+        {% endif %}
       </div>
-  {% endcase %}
-{% endfor %}
-{% comment %} Title block end {% endcomment %}
+    </div>
+  </div>
+</div>
